--- a/app/src/main/res/layout/name_item.xml
+++ b/app/src/main/res/layout/name_item.xml
@@ -39,7 +39,7 @@
         <TextView android:id="@+id/surename"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="@{ name.surname }"
+                  android:text="@{ name.lastName }"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
